[gd_scene load_steps=4 format=3 uid="uid://bangv3p0aeglq"]

[ext_resource type="Script" path="res://ui_elements/value_gauge/value_gauge.gd" id="1_3u0yb"]
[ext_resource type="Texture2D" uid="uid://b25suwefpfitg" path="res://ui_elements/value_gauge/gauge_body.png" id="2_b5ods"]
[ext_resource type="Texture2D" uid="uid://wrx36m12mgqu" path="res://ui_elements/value_gauge/gauge_needle.png" id="3_5luuh"]

[node name="ValueGauge" type="AspectRatioContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3u0yb")

[node name="GaugeBody" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_b5ods")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="GaugeBody"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.512
anchor_top = 0.662
anchor_right = 0.512
anchor_bottom = 0.662
offset_left = -36.96
offset_top = -22.9601
offset_right = 38.04
offset_bottom = 22.0399
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"SettingsLabel"
theme_override_font_sizes/font_size = 32
text = "0.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GaugeNeedle" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_5luuh")
expand_mode = 1
stretch_mode = 4
